--- a/index.html
+++ b/index.html
@@ -4,8 +4,12 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>ConnectAI - SMB CCaaS</title>
-    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+    <meta name="theme-color" content="#4f46e5" />
+    <meta name="description" content="ConnectAI - SMB CCaaS platform" />
+    <link href="https://fonts.googleapis.com/css2?family=Inter:wght@300;400;500;600;700&family=Space+Grotesk:wght@400;500;600;700&display=swap" rel="stylesheet">
     <link rel="icon" href="/favicon.svg" type="image/svg+xml" />
+    <link rel="manifest" href="/manifest.json" />
+    <link rel="apple-touch-icon" href="/favicon.svg" />
   <script type="importmap">
 {
   "imports": {
@@ -21,6 +25,13 @@
 </head>
   <body class="bg-slate-50 text-slate-900 h-screen overflow-hidden">
     <div id="root"></div>
+    <script>
+      (function () {
+        if (window.location.pathname === '/app' && !window.location.hash) {
+          window.location.replace('/#/app');
+        }
+      })();
+    </script>
   <script type="module" src="/index.tsx"></script>
 </body>
 </html>
